Corrected the navbar being slightly tilted on smaller screens

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ transition: 0.4s;
 
 list-style-type: none;
 float: right;
-padding-right: 1.2rem;
+padding: 0.5rem;
 }
 
 #navbar a:hover {
